--- a/views/index.html
+++ b/views/index.html
@@ -19,9 +19,10 @@
 </head>
   <body class="light">
     <main>
-      
-      <button id="backtotop"><i class="ms-Icon ms-Icon--Upload" aria-hidden="true"></i></button>
-      <button id="darkbutton"><i class="ms-Icon ms-Icon--Light" aria-hidden="true"></i></button>
+      <nav>
+        <a id="darkbutton">
+           DARK MODE</a>
+      </nav>
     </main>
     
 <!--     Animation Imports -->
