--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /* this file is loaded by index.html and styles the page */
 
 @font-face {
-  src: url(/fonts/SafariForSpotify_Circular.otf);
+  src: url(/fonts/Circular.otf);
   font-family: "BrushFont";
 }
 
