--- a/views/index.html
+++ b/views/index.html
@@ -20,8 +20,8 @@
   <body class="light">
     <main>
       <nav>
-        <a id="darkbutton">
-           DARK MODE</a>
+        <button id="darkbutton">DARK MODE
+        </button>
       </nav>
     </main>
     
