--- a/public/css/topnav.css
+++ b/public/css/topnav.css
@@ -14,10 +14,10 @@ nav {
     font-size: 17px;
   }
   
-  nav a:hover {
-/*     border-bottom: 2px solid green; */
+  /* nav a:hover {
+     border-bottom: 2px solid green; 
   
-  }
+  } */
   
   nav #logo {
     height: 5vh;
