--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,9 @@
         <button id="darkbutton">DARK MODE
         </button>
       </nav>
+      <section>
+        <h1 id="intro-text">Stop Sixteenth</h1>
+      </section>
     </main>
     
 <!--     Animation Imports -->
